diesel-builders/tests/ui/missing_primary_key_error.stderr
error: no field with column name `id`
 --> tests/ui/missing_primary_key_error.rs:4:47
  |
4 | #[derive(Debug, Queryable, Clone, Selectable, Identifiable, PartialEq, TableModel)]
  |                                               ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Identifiable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Primary key column `id` not found in struct. `TableModel` requires a detectable primary key. Either:
       1. Add an `id` field to your struct (default primary key), or
       2. Specify primary key columns with `#[diesel(primary_key(your_column))]`
 --> tests/ui/missing_primary_key_error.rs:5:1
  |
5 | / #[diesel(table_name = users)]
6 | | pub struct User {
7 | |     name: String,
8 | |     email: String,
9 | | }
  | |_^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `users`
 --> tests/ui/missing_primary_key_error.rs:5:23
  |
5 | #[diesel(table_name = users)]
  |                       ^^^^^ use of unresolved module or unlinked crate `users`
  |
  = help: if you wanted to use a crate named `users`, use `cargo add users` to add it to your `Cargo.toml`
