diesel-builders/tests/ui/missing_primary_key_error.rs
use diesel::prelude::*;
use diesel_builders::prelude::*;

#[derive(Debug, Queryable, Clone, Selectable, Identifiable, PartialEq, TableModel)]
#[diesel(table_name = users)]
pub struct User {
    name: String,
    email: String,
}

fn main() {}
